# sample_cpp

./: CMakeLists.txt  README.md  hello.cpp  main.cpp
lib/math/: CMakeLists.txt  operations.cpp  operations.hpp
sample_snippets/: make_invocation.sh  variables_loops.txt
